fixed media queries for overlays on mobile

--- a/css/input.css
+++ b/css/input.css
@@ -56,7 +56,7 @@
   }
 
   .overlay {
-    @apply fixed z-50 flex flex-col gap-8 py-8 px-10 -translate-x-1/2 -translate-y-1/2 bg-white rounded-2xl top-1/2 left-1/2 max-h-[95vh] overflow-y-auto;
+    @apply fixed z-50 flex flex-col gap-8 py-8 px-4 -translate-x-1/2 -translate-y-1/2 bg-white rounded-2xl top-1/2 left-1/2 max-h-[95vh] overflow-y-auto sm:px-10;
   }
 
   .overlay button {
